# ChangeLog for app-editors/nano
# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-editors/nano/ChangeLog,v 1.129 2006/10/17 12:08:09 uberlord Exp $

  17 Oct 2006; Roy Marples <uberlord@gentoo.org> nano-1.3.12-r1.ebuild:
  Added ~sparc-fbsd keyword.

  18 Sep 2006; Gustavo Zacarias <gustavoz@gentoo.org> nano-1.3.12-r1.ebuild:
  Stable on sparc wrt #147882

  17 Sep 2006; Torsten Veller <tove@gentoo.org> nano-1.3.12-r1.ebuild:
  Stable on x86 (#147882)

  17 Sep 2006; Marcus D. Hanwell <cryos@gentoo.org> nano-1.3.12-r1.ebuild:
  Stable on amd64, bug 147882.

  17 Sep 2006; Thomas Cort <tcort@gentoo.org> nano-1.3.12-r1.ebuild:
  Stable on alpha wrt Bug #147882.

  17 Sep 2006; Tobias Scherbaum <dertobi123@gentoo.org>
  nano-1.3.12-r1.ebuild:
  ppc stable, bug #147882

  17 Sep 2006; Fabian Groffen <grobian@gentoo.org> nano-1.3.12-r1.ebuild:
  Marked ppc-macos stable for progressive users (bug #147882)

  17 Sep 2006; Markus Rothe <corsair@gentoo.org> nano-1.3.12-r1.ebuild:
  Stable on ppc64; bug #147882

  19 Jul 2006; Mike Frysinger <vapier@gentoo.org>
  +files/nano-1.3.12-fix2.patch, nano-1.3.12-r1.ebuild:
  Minor build fix from upstream.

  17 Jul 2006; Mike Frysinger <vapier@gentoo.org> +files/gentoo.nanorc,
  nano-1.3.12-r1.ebuild:
  Switch nanorc file over to new include system and add some more colorization
  by Benno Schulenberg #138056.

*nano-1.3.12-r1 (15 Jul 2006)

  15 Jul 2006; Mike Frysinger <vapier@gentoo.org>
  +files/nano-1.3.12-scroll.patch, +files/nano-1.3.12-path.patch,
  +nano-1.3.12-r1.ebuild:
  Fixes from upstream.

  09 Jul 2006; Joshua Kinard <kumba@gentoo.org> nano-1.3.11-r2.ebuild:
  Marked stable on mips.

  27 Jun 2006; Chris Gianelloni <wolf31o2@gentoo.org> nano-1.3.11-r2.ebuild:
  Stable on x86 wrt bug #138086.

  27 Jun 2006; Fabian Groffen <grobian@gentoo.org> nano-1.3.11-r2.ebuild:
  Marked ppc-macos stable for progressive users (bug #138086)
