@@ -15,18 +15,26 @@ MD5 61c9c18d6e52103460bc4a43d4710d0d files/nano-1.3.12-scroll.patch 1357
 RMD160 0ff451539b959ed1b48995cacec0ee5938f51390 files/nano-1.3.12-scroll.patch 1357
 SHA256 5f44b124d829c3a1d98be782de90728e425e8cd8c7fac73fe36c8dfaa97d4773 files/nano-1.3.12-scroll.patch 1357
 DIST nano-1.3.12.tar.gz 1250777 RMD160 f594c4805af873718828b0aedba06c1f89946458 SHA1 70ff08220ebd00399569d64d308a2edc54505264 SHA256 f5537b8a988618fa8524b6a4b0a6950184d37db983b4521ad843b98845da571c
-EBUILD nano-1.3.12-r1.ebuild 2061 RMD160 ac7189fa4110d04abfbbbc3e5698d7db60a4785c SHA1 f5a56ed6970033ea5c3f85ab1ec03561fa77cf6c SHA256 13fe2530be42b0af014a5a286ca4dfa97a328dc9a8aaa01609c4c837c5ebf3be
-MD5 050f30ce678d39cbaa56d7c87b9db3c3 nano-1.3.12-r1.ebuild 2061
-RMD160 ac7189fa4110d04abfbbbc3e5698d7db60a4785c nano-1.3.12-r1.ebuild 2061
-SHA256 13fe2530be42b0af014a5a286ca4dfa97a328dc9a8aaa01609c4c837c5ebf3be nano-1.3.12-r1.ebuild 2061
-MISC ChangeLog 14888 RMD160 47d3da9fb9937ecb36239a23a4d6f863a57af14f SHA1 27238b239aa8bde387a44b1a1fdf5c59457f542b SHA256 245253cf9c322f48f9e986cf958da578add576fb1756e9c762de3658066f9be6
-MD5 2309c5645dd392c09417590bc0cfdf0c ChangeLog 14888
-RMD160 47d3da9fb9937ecb36239a23a4d6f863a57af14f ChangeLog 14888
-SHA256 245253cf9c322f48f9e986cf958da578add576fb1756e9c762de3658066f9be6 ChangeLog 14888
-MISC metadata.xml 1015 RMD160 37b6ed999eb17334da133052b31559ed1114b7c5 SHA1 d61278aeff2b1e410144c57c58490ae6099e2aa3 SHA256 79a849e6d5d37060b2b14a3b5addfdf9a9d01b928caeade6c6b078851713d57b
-MD5 b297797b490f7c6ca8d5f40f2d6347cc metadata.xml 1015
-RMD160 37b6ed999eb17334da133052b31559ed1114b7c5 metadata.xml 1015
-SHA256 79a849e6d5d37060b2b14a3b5addfdf9a9d01b928caeade6c6b078851713d57b metadata.xml 1015
+DIST nano-2.0.1.tar.gz 1299203 RMD160 bce343f9f31c1cc63bd4b37a66fefcaa159a11cf SHA1 9c5e26893879355e41e417de30e9473439ceaf5d SHA256 6af1a2081c6303008163719b9012b403b461fb07991b5603ac28a820494741e2
+EBUILD nano-1.3.12-r1.ebuild 2065 RMD160 6dd0982221c49ee233d58359ac5a76f5e0cd4c98 SHA1 f20a6d9aa76170c66fc428e9a91ee1ec53a2c144 SHA256 9bf8c0f98f3d0dff55e920ed809f4c69ec1a20a86b7f6c245953e72c0a829c4c
+MD5 a2536dd165c54befc7be25556b5af2d8 nano-1.3.12-r1.ebuild 2065
+RMD160 6dd0982221c49ee233d58359ac5a76f5e0cd4c98 nano-1.3.12-r1.ebuild 2065
+SHA256 9bf8c0f98f3d0dff55e920ed809f4c69ec1a20a86b7f6c245953e72c0a829c4c nano-1.3.12-r1.ebuild 2065
+EBUILD nano-2.0.1.ebuild 1930 RMD160 032735c2b4d3383820a4785bea5143eb6eac60d8 SHA1 b5cb1287b68487f007a4578efc7dd9ef20837f1e SHA256 a9b35dcc64e4bb8cc1d9db2e3ee0665ebf25cd47f8c43db63875df307dc2a4a6
+MD5 05b67a6d8f2ff6558a29831142466f15 nano-2.0.1.ebuild 1930
+RMD160 032735c2b4d3383820a4785bea5143eb6eac60d8 nano-2.0.1.ebuild 1930
+SHA256 a9b35dcc64e4bb8cc1d9db2e3ee0665ebf25cd47f8c43db63875df307dc2a4a6 nano-2.0.1.ebuild 1930
+MISC ChangeLog 15114 RMD160 ad3ef76c538db3370b2c740277e57dde2be12c59 SHA1 1bd25bd86b9d71557ae04d6014497b4c2a38ad74 SHA256 5490f3d8cd4d00fd85de032819c93a9b3154767362c08e4c2d159deb8b1f25cc
+MD5 2414f4fdac80afdf5f42cf1ad0f09ac3 ChangeLog 15114
+RMD160 ad3ef76c538db3370b2c740277e57dde2be12c59 ChangeLog 15114
+SHA256 5490f3d8cd4d00fd85de032819c93a9b3154767362c08e4c2d159deb8b1f25cc ChangeLog 15114
+MISC metadata.xml 986 RMD160 1ee17789653e837a9a8599d409ebe5a4dbc521c7 SHA1 d75a4da179e63c122a065f6d17f1871ee762040b SHA256 6275a0f662182b053119dda8ce016bf860aa75813c179a951b253fb9f5caef6b
+MD5 91890fbf824e8d11c4f7e7b77153c316 metadata.xml 986
+RMD160 1ee17789653e837a9a8599d409ebe5a4dbc521c7 metadata.xml 986
+SHA256 6275a0f662182b053119dda8ce016bf860aa75813c179a951b253fb9f5caef6b metadata.xml 986
 MD5 4baa4a2c2e0b0ad343cf3f648184d5ad files/digest-nano-1.3.12-r1 238
 RMD160 06dc9bd947bc9f3fe88c0b5346ec3e5493aa5dfb files/digest-nano-1.3.12-r1 238
 SHA256 ea6e29364ff13378968ac433b1142ceabbc525a0424760b66fa1d8524bbd17cf files/digest-nano-1.3.12-r1 238
+MD5 6c276806ce2144b60cc6cc294131cdc8 files/digest-nano-2.0.1 235
+RMD160 b0ed1e76570186eb59b1e968ba2d6385663f1f76 files/digest-nano-2.0.1 235
+SHA256 0e8da9149ca6368913f202fc1bf78df81bb31144680612c27d99954a272eb173 files/digest-nano-2.0.1 235
