@@ -1,0 +1,3 @@
+MD5 8abe33be6816ad9acd17391806b42d92 nano-2.0.1.tar.gz 1299203
+RMD160 bce343f9f31c1cc63bd4b37a66fefcaa159a11cf nano-2.0.1.tar.gz 1299203
+SHA256 6af1a2081c6303008163719b9012b403b461fb07991b5603ac28a820494741e2 nano-2.0.1.tar.gz 1299203
