@@ -1,6 +1,16 @@
 # ChangeLog for app-editors/nano
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-editors/nano/ChangeLog,v 1.129 2006/10/17 12:08:09 uberlord Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-editors/nano/ChangeLog,v 1.131 2006/11/26 12:29:32 vapier Exp $
+
+*nano-2.0.1 (26 Nov 2006)
+
+  26 Nov 2006; Mike Frysinger <vapier@gentoo.org> +nano-2.0.1.ebuild:
+  Version bump.
+
+*nano-2.0.0 (06 Nov 2006)
+
+  06 Nov 2006; Mike Frysinger <vapier@gentoo.org> +nano-2.0.0.ebuild:
+  Version bump.
 
   17 Oct 2006; Roy Marples <uberlord@gentoo.org> nano-1.3.12-r1.ebuild:
   Added ~sparc-fbsd keyword.
